examples/asm/RegistroDiCassa-1.0.6/evosuite-warehouse/v010/README.md
# V010
To improve the generation of test cases I added the CBRANCH criterion that covers all the 
conditions of a branch

## Problems

- Evosuite generates 10 test cases but only 3 are executable scenarios.
- Checking controlled variables can lead to errors, 
  in fact the test0 scenario has 4 incorrect checks caused by controlled variables:
  ```
  CHECK FAILED: servizioSelezionato = NEWORDINE at step 2 
  CHECK FAILED: sceltaDiAggiuntaPizza = SI at step 3 
  CHECK FAILED: servizioSelezionato = EXIT at step 3
  CHECK FAILED: servizioSelezionato = NEWORDINE at step 4
  ```
- I made a scenario equal to the one created by evosuite through the ASMETA animator and I compared 
  the two avalla files:
  #### AVALLA generated by ASMETA animator:
  ```
  //// starting scenario
  scenario SCENARIO_NAME
  load RegistroDiCassav2.asm
  set servizioSelezionato := NEWORDINE;
  set sceltaDiAggiuntaPizza := SI;
  step
  check statoCassa = SCEGLI_TIPO_DI_PIZZA;
  check outMess = Scegli il tipo di pizza desiderata;
  check totale = 0;
  set servizioSelezionato := NEWORDINE;
  set sceltaDiAggiuntaPizza := SI;
  set sceltaDelTipoPizza := OTHER;
  step
  check statoCassa = ALTRAPIZZA_SELEZIONATA;
  check outMess = Inserisci il nome di una nuova pizza;
  check totale = 0;
  set servizioSelezionato := NEWORDINE;
  set sceltaDiAggiuntaPizza := SI;
  set sceltaDelTipoPizza := OTHER;
  set insertQuantita := 10;
  set insertPrezzo := 9;
  step
  check statoCassa = SCEGLI_SE_AGGIUNGERE_PIZZA;
  check outMess = prezzo totale aggiornato;
  check totale = 90;
  set servizioSelezionato := NEWORDINE;
  set sceltaDiAggiuntaPizza := NO;
  set sceltaDelTipoPizza := OTHER;
  set insertQuantita := 10;
  set insertPrezzo := 9;
  step
  check statoCassa = ATTENDI_ORDINAZIONI;
  check outMess = 90;
  check totale = 90;
  set servizioSelezionato := EXIT;
  set sceltaDiAggiuntaPizza := NO;
  set sceltaDelTipoPizza := OTHER;
  set insertQuantita := 10;
  set insertPrezzo := 9;
  step
  check statoCassa = CHIUSO;
  check outMess = Registro di cassa chiuso!;
  check totale = 90;
  step
  ```
  #### AVALLA generated by EvoSuite and parsed:
  (with failing checks commented)
  ```
  scenario test0_scenario

  load RegistroDiCassav2.asm
  
  check statoCassa = ATTENDI_ORDINAZIONI;
  check totale=0;
  
  set servizioSelezionato := NEWORDINE;
  set sceltaDiAggiuntaPizza := SI;
  set sceltaDelTipoPizza := OTHER;
  set insertQuantita := 9;
  set insertPrezzo := 10;
  step
  check servizioSelezionato = NEWORDINE;
  check sceltaDiAggiuntaPizza = SI;
  check totale = 0;
  check statoCassa = SCEGLI_TIPO_DI_PIZZA;
  check sceltaDelTipoPizza = OTHER;
  
  set servizioSelezionato := NEWORDINE;
  set sceltaDiAggiuntaPizza := SI;
  set sceltaDelTipoPizza := OTHER;
  set insertQuantita := 1;
  set insertPrezzo := 1;
  step
  check totale=0;
  //check servizioSelezionato = NEWORDINE;
  check sceltaDiAggiuntaPizza = SI;
  check statoCassa = ALTRAPIZZA_SELEZIONATA;
  check sceltaDelTipoPizza = OTHER;
  
  set servizioSelezionato := EXIT;
  set sceltaDiAggiuntaPizza := SI;
  set sceltaDelTipoPizza := OTHER;
  set insertQuantita := 10;
  set insertPrezzo := 9;
  step
  check statoCassa = SCEGLI_SE_AGGIUNGERE_PIZZA;
  //check sceltaDiAggiuntaPizza = SI;
  check totale=90;
  //check servizioSelezionato = EXIT;
  check sceltaDelTipoPizza = OTHER;
  
  set servizioSelezionato := NEWORDINE;
  set sceltaDiAggiuntaPizza := NO;
  set sceltaDelTipoPizza := OTHER;
  set insertQuantita := 0;
  set insertPrezzo := 1;
  step
  check sceltaDiAggiuntaPizza = NO;
  check statoCassa = ATTENDI_ORDINAZIONI;
  //check servizioSelezionato = NEWORDINE;
  check totale=90;
  check sceltaDelTipoPizza = OTHER;
  
  set servizioSelezionato := EXIT;
  set sceltaDiAggiuntaPizza := NO;
  set sceltaDelTipoPizza := OTHER;
  set insertQuantita := 3;
  set insertPrezzo := 10;
  step
  check sceltaDiAggiuntaPizza = NO;
  check statoCassa = CHIUSO;
  check totale=90;
  check servizioSelezionato = EXIT;
  check sceltaDelTipoPizza = OTHER;
  
  check sceltaDiAggiuntaPizza = NO;
  check statoCassa = CHIUSO;
  check totale=90;
  check servizioSelezionato = EXIT;
  check sceltaDelTipoPizza = OTHER;
  check totale>=50;
  ```
  we can notice the following differences of the second compared to the first:
  - the check of the monitored variables
  - some controlled variables are not checked
  - at each step I need to set all the monitored variables
  - the final state condition (totale>=50)

## How to
```shell
mvn compile
```
```shell
mvn dependency:copy-dependencies -DincludeScope=runtime
```
```shell
java -jar evosuite-1.0.6.jar -setup target/classes target/dependency/commons-collections-3.2.2.jar
```
```shell
java -jar .\evosuite-1.0.6.jar -class org.evoservice.RegistroDiCassa.RegistroDiCassav2_ASM -criterion LINE:BRANCH:CBRANCH -Dminimize=true -Dassertion_strategy=all -Dsearch_budget=150
```

### log
* EvoSuite 1.0.6
* Going to generate test cases for class: org.evoservice.RegistroDiCassa.RegistroDiCassav2_ASM
* Starting client
* Properties loaded from C:\Users\isaac\Documents\GitHub\evosuite-tutorial\examples\asm\RegistroDiCassa-1.0.6\evosuite-files\evosuite.properties
* Connecting to master process on port 18222
* Analyzing classpath:
  - target/classes
  - target/dependency/commons-collections-3.2.2.jar
* Finished analyzing classpath
* Generating tests for class org.evoservice.RegistroDiCassa.RegistroDiCassav2_ASM
* Test criteria:
  - Line Coverage
  - Branch Coverage
  - Context Branch Coverage
* Setting up search algorithm for whole suite generation
* Total number of test goals:
  - Line 49
    [Progress:>                             0%] [Cov:>                                  0%]  - Branch 20
  - CBranchFitnessFactory 20
* Using seed 1724840437535
* Starting evolution
  [Progress:=>                            6%] [Cov:===================================100%]
* Search finished after 10s and 55 generations, 23757 statements, best individual has fitness: 0.0
* Minimizing test suite
* Going to analyze the coverage criteria
* Coverage analysis for criterion LINE
* Coverage of criterion LINE: 100%
* Total number of goals: 49
* Number of covered goals: 49
* Coverage analysis for criterion BRANCH
* Coverage of criterion BRANCH: 100%
* Total number of goals: 20
* Number of covered goals: 20
* Coverage analysis for criterion CBRANCH
* Coverage of criterion CBRANCH: 100%
* Total number of goals: 20
* Number of covered goals: 20
* Generated 10 tests with total length 44
* Resulting test suite's coverage: 100% (average coverage for all fitness functions)
* Generating assertions
* Compiling and checking tests
* Writing JUnit test case 'RegistroDiCassav2_ASM_ESTest' to evosuite-tests
* Done!

* Computation finished

## Scenario
### test0
```
<State 1 (controlled)>
Pizza = {margherita, marinara, capricciosa}
statoCassa = ATTENDI_ORDINAZIONI
totale = 0
Set servizio = NEWORDINE
Set aggiungiPizza = SI
Set selezioneTipoDiPizza = OTHER
Set quantita' = 9
Set prezzo = 10
</State 1 (controlled)>

<Stato attuale>
Pizza = {margherita, marinara, capricciosa}
statoCassa = SCEGLI_TIPO_DI_PIZZA
totale = 0
<State 2 (controlled)>
Pizza = {margherita, marinara, capricciosa}
statoCassa = SCEGLI_TIPO_DI_PIZZA
totale = 0
Set servizio = NEWORDINE
Set aggiungiPizza = SI
Set selezioneTipoDiPizza = OTHER
Set quantita' = 1
Set prezzo = 1
</State 2 (controlled)>

<Stato attuale>
Pizza = {margherita, marinara, capricciosa}
statoCassa = ALTRAPIZZA_SELEZIONATA
totale = 0
<State 3 (controlled)>
Pizza = {margherita, marinara, capricciosa}
statoCassa = ALTRAPIZZA_SELEZIONATA
totale = 0
Set servizio = EXIT
Set aggiungiPizza = SI
Set selezioneTipoDiPizza = OTHER
Set quantita' = 10
Set prezzo = 9
</State 3 (controlled)>

<Stato attuale>
Pizza = {margherita, marinara, capricciosa}
statoCassa = SCEGLI_SE_AGGIUNGERE_PIZZA
totale = 90
<State 4 (controlled)>
Pizza = {margherita, marinara, capricciosa}
statoCassa = SCEGLI_SE_AGGIUNGERE_PIZZA
totale = 90
Set servizio = NEWORDINE
Set aggiungiPizza = NO
Set selezioneTipoDiPizza = OTHER
Set quantita' = 0
Set prezzo = 1
</State 4 (controlled)>

<Stato attuale>
Pizza = {margherita, marinara, capricciosa}
statoCassa = ATTENDI_ORDINAZIONI
totale = 90
<State 5 (controlled)>
Pizza = {margherita, marinara, capricciosa}
statoCassa = ATTENDI_ORDINAZIONI
totale = 90
Set servizio = EXIT
Set aggiungiPizza = NO
Set selezioneTipoDiPizza = OTHER
Set quantita' = 3
Set prezzo = 10
</State 5 (controlled)>

<Stato attuale>
Pizza = {margherita, marinara, capricciosa}
statoCassa = CHIUSO
totale = 90

<Stato finale>
```
#### Avalla:
```
check succeeded: statoCassa = ATTENDI_ORDINAZIONI 
check succeeded: totale=0 
check succeeded: servizioSelezionato = NEWORDINE 
check succeeded: sceltaDiAggiuntaPizza = SI 
check succeeded: totale = 0 
check succeeded: statoCassa = SCEGLI_TIPO_DI_PIZZA 
check succeeded: sceltaDelTipoPizza = OTHER 
check succeeded: totale=0 
check succeeded: sceltaDiAggiuntaPizza = SI 
check succeeded: statoCassa = ALTRAPIZZA_SELEZIONATA 
check succeeded: sceltaDelTipoPizza = OTHER 
check succeeded: statoCassa = SCEGLI_SE_AGGIUNGERE_PIZZA 
check succeeded: totale=90 
check succeeded: sceltaDelTipoPizza = OTHER 
check succeeded: sceltaDiAggiuntaPizza = NO 
check succeeded: statoCassa = ATTENDI_ORDINAZIONI 
check succeeded: totale=90 
check succeeded: sceltaDelTipoPizza = OTHER 
check succeeded: sceltaDiAggiuntaPizza = NO 
check succeeded: statoCassa = CHIUSO 
check succeeded: totale=90 
check succeeded: servizioSelezionato = EXIT 
check succeeded: sceltaDelTipoPizza = OTHER 
check succeeded: sceltaDiAggiuntaPizza = NO 
check succeeded: statoCassa = CHIUSO 
check succeeded: totale=90 
check succeeded: servizioSelezionato = EXIT 
check succeeded: sceltaDelTipoPizza = OTHER 
check succeeded: totale>=50 
```
### test1
```
- no output (the asm doesn't perform any step)
```
### test2
```
- no output (the asm doesn't perform any step)
```
### test3
```
- no output (the asm doesn't perform any step)
```
### test4
```
- no output (the asm doesn't perform any step)
```
### test5
```
- no output (the asm doesn't perform any step)
```
### test6
```
- no output (the asm doesn't perform any step)
```
### test7
```
- no output (the asm doesn't perform any step)
```
### test8
```
<State 1 (controlled)>
Pizza = {margherita, marinara, capricciosa}
statoCassa = ATTENDI_ORDINAZIONI
totale = 0
Set servizio = NEWORDINE
Set aggiungiPizza = NO
Set selezioneTipoDiPizza = OTHER
Set quantita' = 9
Set prezzo = 10
</State 1 (controlled)>

<Stato attuale>
Pizza = {margherita, marinara, capricciosa}
statoCassa = ATTENDI_ORDINAZIONI
totale = 0
<State 2 (controlled)>
Pizza = {margherita, marinara, capricciosa}
statoCassa = ATTENDI_ORDINAZIONI
totale = 0
Set servizio = NEWORDINE
Set aggiungiPizza = SI
Set selezioneTipoDiPizza = OTHER
Set quantita' = 9
Set prezzo = 10
</State 2 (controlled)>

<Stato attuale>
Pizza = {margherita, marinara, capricciosa}
statoCassa = SCEGLI_TIPO_DI_PIZZA
totale = 0
<State 3 (controlled)>
Pizza = {margherita, marinara, capricciosa}
statoCassa = SCEGLI_TIPO_DI_PIZZA
totale = 0
Set servizio = NEWORDINE
Set aggiungiPizza = SI
Set selezioneTipoDiPizza = OTHER
Set quantita' = 1
Set prezzo = 1
</State 3 (controlled)>

<Stato attuale>
Pizza = {margherita, marinara, capricciosa}
statoCassa = ALTRAPIZZA_SELEZIONATA
totale = 0
<State 4 (controlled)>
Pizza = {margherita, marinara, capricciosa}
statoCassa = ALTRAPIZZA_SELEZIONATA
totale = 0
Set servizio = NEWORDINE
Set aggiungiPizza = SI
Set selezioneTipoDiPizza = OTHER
Set quantita' = 10
Set prezzo = 9
</State 4 (controlled)>

<Stato attuale>
Pizza = {margherita, marinara, capricciosa}
statoCassa = SCEGLI_SE_AGGIUNGERE_PIZZA
totale = 90
```
#### Avalla
```
```

### test9
```
<State 1 (controlled)>
Pizza = {margherita, marinara, capricciosa}
statoCassa = ATTENDI_ORDINAZIONI
totale = 0
Set servizio = NEWORDINE
Set aggiungiPizza = SI
Set selezioneTipoDiPizza = OTHER
Set quantita' = 9
Set prezzo = 10
</State 1 (controlled)>

<Stato attuale>
Pizza = {margherita, marinara, capricciosa}
statoCassa = SCEGLI_TIPO_DI_PIZZA
totale = 0
<State 2 (controlled)>
Pizza = {margherita, marinara, capricciosa}
statoCassa = SCEGLI_TIPO_DI_PIZZA
totale = 0
Set servizio = NEWORDINE
Set aggiungiPizza = SI
Set selezioneTipoDiPizza = OTHER
Set quantita' = 1
Set prezzo = 1
</State 2 (controlled)>

<Stato attuale>
Pizza = {margherita, marinara, capricciosa}
statoCassa = ALTRAPIZZA_SELEZIONATA
totale = 0
<State 3 (controlled)>
Pizza = {margherita, marinara, capricciosa}
statoCassa = ALTRAPIZZA_SELEZIONATA
totale = 0
Set servizio = NEWORDINE
Set aggiungiPizza = SI
Set selezioneTipoDiPizza = OTHER
Set quantita' = 10
Set prezzo = 9
</State 3 (controlled)>

<Stato attuale>
Pizza = {margherita, marinara, capricciosa}
statoCassa = SCEGLI_SE_AGGIUNGERE_PIZZA
totale = 90
```
#### Avalla
```
```
